<resources>
    <string name="app_name">My Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_note">are you sure you want to delete this note</string>
    <string name="delete_note">Delete Note</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="sign_up">Registration</string>
    <string name="registration">Registration</string>
    <string name="password_reset">Forgot Password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="number">Phone Number</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="note_share">Note Share</string>
    <string name="forgot_cort">Don\'t worry, we just need your registered\nemail address and it
        done
    </string>
    <string name="check_email">Check your email and reset your password!</string>
    <string name="verify_email">Check you email to verify you account!</string>
    <string name="email_not_send">Try again! Something wrong happened</string>
    <string name="go_back"><![CDATA[<<Go Back]]></string>
    <string name="create_acc">Create\nAccount</string>
    <string name="shear_app">Shear App</string>


</resources>