<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/colorNoteColor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_35sdp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/profile"
        android:layout_marginLeft="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_medium"/>

    <View
        android:id="@+id/view"
        android:layout_width="168dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <LinearLayout
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/userName"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_email"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textEmail"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textPhone"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/pProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            android:background="@drawable/login_button_design"
            android:drawableLeft="@drawable/ic_baseline_edit"
            android:fontFamily="@font/ubuntu_medium"
            android:drawablePadding="@dimen/_6sdp"
            android:text="Edit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>