<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ForgotPasswordActivity"
    android:transitionName="transition_Forgot"
    >
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/colorNoteColor6"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="115dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogin"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/pw_reset"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_cort"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.166" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/textLogin"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="52dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/_4sdp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:fontFamily="@font/ubuntu_regular"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginLeft="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_45sdp"
            android:background="@drawable/login_button_design"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/textEmail" />

        <TextView
            android:id="@+id/checkEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="@color/colorNoteColor6"
            android:text="@string/check_email"
            android:textAlignment="center"
            android:textColor="@color/colorNoteColor6"
            android:visibility="gone" />

        <TextView
            android:id="@+id/checkEmailFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="@color/colorNoteColor3"
            android:text="@string/email_not_send"
            android:textAlignment="center"
            android:textColor="@color/colorNoteColor3"
            android:visibility="gone" />


    </LinearLayout>

    <TextView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorNoteColor6"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"/>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>