<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_200sdp"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:id="@+id/popupLayout"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/my_notes"
            android:textColor="@color/colorNoteColor2"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/corss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/colorNoteColor3"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/profile"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableTint="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_person"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="About Us"
            android:drawableTint="@color/colorWhite"
            android:drawableLeft="@drawable/info"
            android:drawablePadding="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

        <TextView
            android:id="@+id/shear_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_baseline_share_24"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableTint="@color/colorWhite"
            android:fontFamily="@font/ubuntu_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/shear_app"
            android:visibility="gone"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:drawableLeft="@drawable/logout"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableTint="@color/colorNoteColor3"
            android:fontFamily="@font/ubuntu_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/logout"
            android:textColor="@color/colorNoteColor3"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shear_app" />



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
