<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

<!--    <ImageView-->
<!--        android:id="@+id/imageView3"-->
<!--        android:layout_width="@dimen/_100sdp"-->
<!--        android:layout_height="@dimen/_100sdp"-->
<!--        android:src="@drawable/notes_icon"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.508"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btnLogin"-->
<!--        app:layout_constraintVertical_bias="0.887"-->
<!--        app:tint="@color/colorNoteColor2" />-->

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/textLogin"
        app:layout_constraintStart_toStartOf="@+id/textLogin"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_4sdp"
            android:drawableStart="@drawable/ic_email"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_4sdp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginLeft="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_45sdp"
        android:background="@drawable/login_button_design"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <Button
        android:id="@+id/googleBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_45sdp"
        android:layout_marginRight="@dimen/_45sdp"
        android:background="@drawable/login_button_design"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="@font/ubuntu_regular"
        android:drawableLeft="@drawable/google"
        android:text="Sign in with Google"
        android:textStyle="bold"
        android:paddingLeft="@dimen/_20sdp"
        android:textAllCaps="false"
        android:textColor="@color/colorNoteColor5"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/registration"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/registration"
        app:layout_constraintStart_toStartOf="@+id/registration"
        app:layout_constraintTop_toBottomOf="@+id/registration" />


    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_reset"
        android:textColor="@color/ColorDelete"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/passwordReset"
        app:layout_constraintStart_toStartOf="@+id/passwordReset"
        app:layout_constraintTop_toBottomOf="@+id/passwordReset"
        android:backgroundTint="@color/ColorDelete"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/verify_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/colorNoteColor6"
        android:text="@string/verify_email"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/colorNoteColor6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>